Fixed rows having -15 margin which was breaking the responsiveness on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1085,6 +1085,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
+	background: #00c9db url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -1629,9 +1630,6 @@ a:hover.back-to-top {
     background:#00c9db;
     border-radius: 4px;
 }
-::-webkit-scrollbar-corner {
-	background-color: red;
-}
 
 .container {
 	padding: 0px;
@@ -1650,4 +1648,12 @@ a:hover.back-to-top {
 	-webkit-box-shadow: 10px -10px  rgba(0,0,0,0.6);
 	-o-box-shadow: 10px -10px  rgba(0,0,0,0.6);
 	border-radius:100px;
+}
+
+#features img {
+	object-fit:contain;
+}
+
+.row {
+	margin: 0;
 }
